--- a/app/src/main/res/drawable/ic_home_settings_white_tip.xml
+++ b/app/src/main/res/drawable/ic_home_settings_white_tip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="@dimen/dp_24" android:width="@dimen/dp_24" android:viewportWidth="24" android:viewportHeight="24">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:width="24dp" android:viewportWidth="24" android:viewportHeight="24">
     <group>
         <clip-path android:pathData="M0,0h24v24h-24z"/>
         <path android:fillColor="#ffffff" android:pathData="M15,12L15,12A1,1 0,0 1,14 13L10,13A1,1 0,0 1,9 12L9,12A1,1 0,0 1,10 11L14,11A1,1 0,0 1,15 12z"/>
