--- a/app/src/main/res/drawable/ic_home_settings.xml
+++ b/app/src/main/res/drawable/ic_home_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="@dimen/dp_24" android:width="@dimen/dp_24" android:viewportWidth="24" android:viewportHeight="24">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:width="24dp" android:viewportWidth="24" android:viewportHeight="24">
     <path android:fillColor="#00000000" android:pathData="M14.984,4H9.115C8.048,4 7.061,4.567 6.524,5.488L3.607,10.488C3.062,11.422 3.062,12.578 3.607,13.512L6.524,18.512C7.061,19.433 8.048,20 9.115,20H14.984C16.051,20 17.038,19.433 17.576,18.512L20.492,13.512C21.037,12.578 21.037,11.422 20.492,10.488L17.576,5.488C17.038,4.567 16.051,4 14.984,4Z" android:strokeColor="#000000" android:strokeWidth="2"/>
     <path android:fillColor="#000000" android:pathData="M15,12L15,12A1,1 0,0 1,14 13L10,13A1,1 0,0 1,9 12L9,12A1,1 0,0 1,10 11L14,11A1,1 0,0 1,15 12z"/>
 </vector>
